--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,15 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+# Server Node
+backend/node_modules
+backend/node_modules/*
+
+# Frontend Node
+
+frontend/node_modules
+frontend/node_modules/*
+frontend/.gitignore
+
